# Docker-OCR-2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-diagnose.sh  requirements.txt  setup_ocr.sh  setup_ocr_2.sh  setup_ocr_4.sh  setup_ocr_5.sh  setup_ocr_6.sh  setup_ocr_8.sh  setup_ocr_9.sh  setup_ocr_9a.sh
frontend/: App.tsx  index.html  index.tsx  package-lock.json  package.json  playwright.config.ts  types.ts
frontend/components/: DocumentViewer.tsx  ExtractionResult.tsx  FileUpload.tsx  Terminal.tsx
frontend/services/: angleDetectionService.ts  geminiService.ts
frontend/tests/: debug-rotation.spec.ts  heic-ocr-test.spec.ts
frontend/utils/: backendScript.ts
llm_notes/: improvements_and_best_practices.md  mistakes_and_solutions.md  technologies_used.md
receipts-ocr/: README.md  package-lock.json
receipts-ocr/.github/workflows/: quality.yml
receipts-ocr/backend/: Dockerfile  app.py  pyproject.toml
receipts-ocr/playwright-report/: index.html
receipts-ocr/src/: App.css  App.tsx  types.ts
receipts-ocr/src/services/: ocrService.ts
receipts-ocr/tests/: receipts-ocr.spec.ts
